--- a/DRAG/DRAG.csproj
+++ b/DRAG/DRAG.csproj
@@ -128,5 +128,8 @@
   <ItemGroup>
     <None Include="Resources\ram.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\komp.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
